<resources>
    <string name="app_name">GPS Hawk</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_check">Check</string>
    <string name="user_status_existing">User is existing. Please enter your password to login.</string>
    <string name="user_status_available">Username is available. Please enter a password to register.</string>

    <string name="navigation_capture">Capture GPS</string>
    <string name="navigation_export">Export Data</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>

    <string name="enable_gps_button">GPS is currently deactivated. Hit \'Enable\' to go to android-settings to enable it.</string>
    <string name="enable_gps_button_positive">Enable</string>
    <string name="start_export">Export now</string>
    <string name="amount_of_captured_waypoints">Amount of captured waypoints</string>
    <string name="error_permission_location_required">Location permission is required for this application to work</string>
    <string name="txt_export_url">Export-URL:</string>
    <string name="navigation_settings">Settings</string>
    <string name="notification_tracking_title">GPS Hawk Tracking</string>
    <string name="notification_tracking_text">GPS Hawk is tracking your location</string>
    <string name="number_of_waypoints">Tracked Points: %1$d</string>
    <string name="amount_of_exceptions">Amount of captured log-messages</string>
    <string name="error_export_failed">An error occurred while exporting data - Be sure to have permissions and internet connectivity</string>
    <string name="amount_of_motions">Amount of captured motions</string>
    <string name="update_available">There is an update available. Do you want to install it?</string>
    <string name="update_available_title">Update available</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="content_description_foot">Walking</string>
    <string name="content_description_bicycle">Bicycle</string>
    <string name="content_description_bus">Bus</string>
    <string name="content_description_car">Car</string>
    <string name="content_description_train">Train</string>

    <string name="txt_valid_track_quest">All vehicles \n entered correctly?</string>
    <string name="txt_valid_track_yes">Yes</string>
    <string name="txt_valid_track_no">no</string>
    <string name="amount_of_tracks">Amount of tracks</string>
    <string name="pref_allow_tracking">Mobile Mode</string>
    <string name="error_no_tracks">Sadly you cannot track now as you don\'t have any reserved tracks left. Please start the app when having WLAN or enable tracking without WLAN in the settings.</string>
    <string name="toast_export">Export started…</string>
    <string name="export_database">Export database to Storage</string>
    <string name="database_not_exported">Database could not be exported</string>
    <string name="database_exported">Database exported to external storage</string>
    <string name="error_update">Failed to check for updates</string>
    <string name="txt_rest_server">Server-URL</string>
    <string name="txt_rest_server_default">http://46.101.192.214:8080/webservice/fhvgis/</string>
</resources>
