<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gps.fhv.at.gps_hawk.activities.fragments.CaptureFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:theme="@style/AppTheme">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerVertical="true"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/butNowFoot"
                style="@style/VehicleButtons"
                android:background="@drawable/inactive_vehicle"
                android:contentDescription="@string/content_description_foot"
                android:src="@drawable/walk"/>

            <ImageButton
                android:id="@+id/butNowBicycle"
                style="@style/VehicleButtons"
                android:layout_toEndOf="@+id/butNowFoot"
                android:layout_toRightOf="@+id/butNowFoot"
                android:background="@drawable/inactive_vehicle"
                android:contentDescription="@string/content_description_bicycle"
                android:src="@drawable/bicycle"/>

            <ImageButton
                android:id="@+id/butNowBus"
                style="@style/VehicleButtons"
                android:layout_toEndOf="@+id/butNowBicycle"
                android:layout_toRightOf="@id/butNowBicycle"
                android:background="@drawable/inactive_vehicle"
                android:contentDescription="@string/content_description_bus"
                android:src="@drawable/bus"/>

            <ImageButton
                android:id="@+id/butNowTrain"
                style="@style/VehicleButtons"
                android:layout_toEndOf="@id/butNowBus"
                android:layout_toRightOf="@id/butNowBus"
                android:background="@drawable/inactive_vehicle"
                android:contentDescription="@string/content_description_train"
                android:src="@drawable/train"/>

            <ImageButton
                android:id="@+id/butNowCar"
                style="@style/VehicleButtons"
                android:layout_toEndOf="@id/butNowTrain"
                android:layout_toRightOf="@+id/butNowTrain"
                android:background="@drawable/inactive_vehicle"
                android:contentDescription="@string/content_description_car"
                android:src="@drawable/car"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_waypoint_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map"
            android:text="@string/number_of_waypoints"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_below="@+id/map"
            android:layout_alignParentRight="true"
            android:id="@+id/txt_version_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_waypoint_counter"
            android:orientation="horizontal"
            android:id="@+id/layout_buttons_capture">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_valid_track_quest"
                android:id="@+id/txt_valid_track_quest"
                android:textColor="@color/warn_red"
                android:visibility="gone" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_valid_track_yes"
                android:id="@+id/but_valid_track_yes"
                android:visibility="gone" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_valid_track_no"
                android:id="@+id/but_valid_track_no"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/start_tracking"/>
        </LinearLayout>


    </RelativeLayout>

    <!-- Listview to display slider menu -->
    <ListView
        android:id="@+id/navigation_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_background"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/navigation_selector"
        />

</android.support.v4.widget.DrawerLayout>
