<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="gps.fhv.at.gps_hawk.activities.fragments.ExportFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/export_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:indeterminate="false"
            android:visibility="invisible"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/export_wrapper">

            <LinearLayout
                android:id="@+id/exp_lay_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:text="@string/amount_of_captured_waypoints"/>

                <TextView
                    android:id="@+id/tbx_amount_of_waypoints"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"/>

                <Button
                    android:id="@+id/button_do_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/start_export"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exp_lyt_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:text="@string/amount_of_exceptions"/>

                <TextView
                    android:id="@+id/tbx_amount_of_exceptions"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"/>

                <Button
                    android:id="@+id/button_do_exception_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:text="@string/start_export"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/exp_lyt_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:text="@string/amount_of_motions"/>

                <TextView
                    android:id="@+id/tbx_amount_of_motions"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"/>

                <Button
                    android:id="@+id/button_do_motion_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:text="@string/start_export"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/exp_lyt_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:text="@string/amount_of_tracks"/>

                <TextView
                    android:id="@+id/tbx_amount_of_tracks"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"/>

                <Button
                    android:id="@+id/button_do_track_export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:text="@string/start_export"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_horizontal_margin"
                    android:text="@string/export_database"/>

                <Button
                    android:id="@+id/button_export_db"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/start_export"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--<RelativeLayout-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
    <!--android:theme="@style/AppTheme">-->


    <!--</RelativeLayout>-->
</FrameLayout>
